--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <h1>Sensus Music Player</h1>
         <br>
 
-        <h5>Type a genre, artist, etc.</h5>
-        <h6>We can only play non-copyrighted music... try the word "pop"</h6>
+        <h5>Current Emotion</h5>
         <form id="form">
             <div class="form-group">
                 <input type="text" class="form-contol" id="search">
@@ -27,17 +26,18 @@
             </div>
         </form>
 
+
         <br> 
 
         <div class="row">
             <div class = "col-md-12">
-                <div id="videos">
-
-                </div>
+                <div id="videos"> </div>
             </div>
         </div>
+    
     </div>
 </body>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="script.js"></script>
 </html>
