--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h5>Current Emotion</h5>
         <form id="form">
             <div class="form-group">
-                <input type="text" class="form-contol" id="search">
+                <input type="text" class="form-contol" id="emotion">
             </div>
 
 
